<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_add_new"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/add_word" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_add_translate"
        android:layout_width="200dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/add_translation"
        app:layout_constraintEnd_toEndOf="@+id/et_add_new"
        app:layout_constraintStart_toStartOf="@+id/et_add_new"
        app:layout_constraintTop_toBottomOf="@+id/et_add_new" />

    <Button
        android:id="@+id/btn_add_new_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_words"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_add_translate"
        app:layout_constraintStart_toStartOf="@+id/et_add_translate"
        app:layout_constraintTop_toBottomOf="@+id/et_add_translate" />


</androidx.constraintlayout.widget.ConstraintLayout>