<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.module.ModuleFragment">

    <Button
        android:id="@+id/btn_cards"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cards"
        app:layout_constraintEnd_toStartOf="@id/btn_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_learn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/learning"
        app:layout_constraintEnd_toStartOf="@id/btn_selection"
        app:layout_constraintStart_toEndOf="@+id/btn_cards"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_selection"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_learn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_module_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#fff000"
        android:text="Module Name"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@id/btn_cards"
        app:layout_constraintTop_toBottomOf="@id/btn_cards" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_module"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_module_name"
        app:layout_constraintTop_toBottomOf="@id/txt_module_name"
        tools:itemCount="2"
        tools:listitem="@layout/item_rv_words" />

</androidx.constraintlayout.widget.ConstraintLayout>